# weather_bot

./: .dockerignore  .gitignore  Dockerfile  README.rst  airflow.cfg  docker-compose.yaml  pyproject.toml  supervisord.conf  unittests.cfg
dags/: my_simple_dag.py  test_dag.py  weather_bot.py
dags/helpers/: general.py  helpers_weather_bot.py
tests/: test_supersonic.py  test_weather_bot.py
