[tool.poetry]
name = "weather_bot"
version = "0.1.0"
description = ""
authors = ["Avinash Pancham <avinashpancham@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
apache-airflow = "^1.10.11"
pandas = "^1.1.0"
psycopg2-binary= "^2.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
